# python-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.__project_slug}}/: .autorc  .gitignore  README.md  pyproject.toml
{{cookiecutter.__project_slug}}/.auto/: README.md
{{cookiecutter.__project_slug}}/.github/: CONTRIBUTING.md  config.yml
{{cookiecutter.__project_slug}}/.github/workflows/: main.yml  pypi.yml  skip_test.yml  test.yml
{{cookiecutter.__project_slug}}/docs/: conf.py
{{cookiecutter.__project_slug}}/tests/: __init__.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__package_name}}/: __init__.py
{{cookiecutter.project_slug}}/: .autorc  README.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/.github/: CONTRIBUTING.md  config.yml
{{cookiecutter.project_slug}}/.github/workflows/: main.yml  pypi.yml  skip_test.yml  test.yml
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
