[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"
readme = "README.md"
homepage = "{{cookiecutter.github_url}}"
repository = "{{cookiecutter.github_url}}"
{% if cookiecutter.use_github_pages == 'y' %}
documentation = "https://github.com/{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_slug}}"
{% endif %}
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
# TODO: Find a better way to set these values!
python = "^{{cookiecutter.min_supported_python}}"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
Sphinx = "^4.5"
furo = "*"
livereload = "*"
sphinx-external-toc = "*"
pre-commit = "*"
# TODO: Update once myst-nb v0.14 is released
myst-parser = {extras = ["linkify"], version = "^0.17.0"}
myst-nb = {git = "https://github.com/executablebooks/MyST-NB.git", rev = "refactor-mystnb"}
ipykernel = "*"

[tool.isort]
profile = "black"
