[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"
readme = "README.md"
homepage = "{{cookiecutter.github_url}}"
repository = "{{cookiecutter.github_url}}"
{% if cookiecutter.use_github_pages == 'y' %}
documentation = "https://github.com/{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_slug}}"
{% endif %}
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
{# Uses the < syntax instead of <= because conda-forge does not work correctly with <= #}
python = "{PYTHON_VERSIONS_HOOK}"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
Sphinx = "^4.5"
furo = "*"
sphinx-autobuild = "*"
sphinx-external-toc = "*"
pre-commit = "*"
myst-nb = "*"
ipykernel = "*"
linkify-it-py = "*"
jupyter = "*"
notebook = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
